--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@ google:
 recaptcha keys
 firebase api keys -> create authentication and enable email verify
 hugging face -> create acc > settings > access token
+firestore db > index > Collection ID: answers | Fields: Field: uid, Direction: Ascending | Field: answer, Direction: Ascending | rest default
